added current project to project table

--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@
                             </ul></td>
     
                 </tr>
+
+                <tr><td>  <a href="https://shahafsegal.github.io/piano/">Piano-Man</a></td> <td>Page with a piano you can hover and it'll show the note and what you chose</td>
+                    <td>    <ul>    <li>Online sharing</li>
+                                    <li>Light/Dark Mode</li>
+                                    <li>Hover Piano</li>
+                            </ul></td>
+    
+                </tr>
+
             </tbody>
         </table>
 
