--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="pianoStyle.css">
     <link  rel="stylesheet" href="def_style.css">
     <link id="stylesheet" rel="stylesheet"  href="style1.css">
+    <link rel="icon" type="image/x-icon" href="tav_icon.png">
     
    
 </head>
